# xsearch

./: .gitignore  AGENTS.md  LICENSE  README.en.md  README.md  README.zh-CN.md  SECURITY.md  SKILL.md  config.example.toml  install.ps1  install.sh
.github/workflows/: ci.yml  release.yml
engine/: Cargo.toml
engine/src/: artifact.rs  assemble.rs  config.rs  error.rs  extract.rs  lib.rs  main.rs  page.rs  quality.rs  search.rs  split.rs  types.rs
engine/src/upstream/: http.rs  memory.rs  mod.rs
references/: leaf.md  runtime.md
scripts/: install.sh  test-installer.sh
