[package]
name = "xsearch"
version = "0.1.1"
edition = "2021"
description = "One-shot structured web search CLI for OpenAI-compatible Grok endpoints"
license = "MIT"
repository = "https://github.com/catoncat/xsearch"
homepage = "https://github.com/catoncat/xsearch"
keywords = ["grok", "search", "agent", "cli"]
categories = ["command-line-utilities", "web-programming::http-client"]

[[bin]]
name = "xsearch"
path = "src/main.rs"

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
futures = "0.3"
once_cell = "1"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
toml = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
